--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
-<h1> My Cd's </h1>
-
-<p> Add a CD </p>
+<h1> MY MUSIC </h1>
+<img src="css/justin.png" width="300" height="230">
+<h2> Add a CD </h2>
 
 <form action="/new_album" method="post">
   <label for="artist">Artist</label>
